d2c-org/d2c-core/error-handling-framework/main/default/objects/ExceptionLog__e/ExceptionLog__e.object-meta.xml
<CustomObject>
    <description>Error log for tracking platform errors.</description>
    <label>Exception Log</label>
    <pluralLabel>Exception Logs</pluralLabel>
</CustomObject>