d2c-org/d2c-core/error-handling-framework/main/default/objects/ExceptionLog__e/fields/CurrentUser__c.field-meta.xml
<CustomField>
    <fullName>CurrentUser__c</fullName>
    <description>Id of user that triggered the error.</description>
    <inlineHelpText>Id of user that triggered the error.</inlineHelpText>
    <label>Current User</label>
    <length>100</length>
    <type>Text</type>
</CustomField>