d2c-org/d2c-core/error-handling-framework/main/default/objects/ExceptionLog__e/fields/ErrorDescription__c.field-meta.xml
<CustomField>
    <fullName>ErrorDescription__c</fullName>
    <description>Detailed description of error.</description>
    <inlineHelpText>Detailed description of error.</inlineHelpText>
    <label>Error Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>