d2c-org/d2c-core/error-handling-framework/main/default/objects/ExceptionLog__e/fields/ReferenceId__c.field-meta.xml
<CustomField>
    <fullName>ReferenceId__c</fullName>
    <description>Id of record that triggered the error.</description>
    <inlineHelpText>Id of record that triggered the error.</inlineHelpText>
    <label>Reference Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>