d2c-org/d2c-core/error-handling-framework/main/default/objects/ExceptionLog__e/fields/RequestData__c.field-meta.xml
<CustomField>
    <fullName>RequestData__c</fullName>
    <description>Data that was entered by user when the error occurred.</description>
    <label>Request Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>