d2c-org/d2c-core/error-handling-framework/main/default/objects/ExceptionLog__e/fields/ResponseCode__c.field-meta.xml
<CustomField>
    <fullName>ResponseCode__c</fullName>
    <description>Status from callout.</description>
    <label>Response Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>