d2c-org/d2c-core/error-handling-framework/main/default/objects/ExceptionLog__e/fields/ServiceName__c.field-meta.xml
<CustomField>
    <fullName>ServiceName__c</fullName>
    <description>Name of the service that was called when the error occurred.</description>
    <label>Service Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>