d2c-org/d2c-core/error-handling-framework/main/default/objects/ExceptionLog__e/fields/StackTrace__c.field-meta.xml
<CustomField>
    <fullName>StackTrace__c</fullName>
    <description>The stack trace of a thrown exception</description>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>